# breakpoint

./: .agents.yaml  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BREAKPOINT-DESIGN-DOC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT-PLAN.md  README.md  UX-REVIEW-PLAN.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  main-ci.yml  pr-validation.yml
ci/: run-ci.sh
config/: golf.toml  lasertag.toml  platformer.toml  player_colors.toml
config/arenas/: default.json  large.json  small.json
config/courses/: 01_starter_course.json  02_gentle_straight.json  03_the_bend.json  04_bumper_alley.json  05_dogleg.json  06_the_funnel.json  07_pinball.json  08_zigzag.json  09_fortress.json
crates/adapters/breakpoint-github/: Cargo.toml
crates/adapters/breakpoint-github/src/: agent_detect.rs  config.rs  lib.rs  poller.rs
crates/breakpoint-client/: Cargo.toml
crates/breakpoint-client/src/: app.rs  audio.rs  between_rounds.rs  bridge.rs  camera.rs  camera_gl.rs  diag.rs  editor.rs  game.rs  game_over.rs  input.rs  lib.rs  lobby.rs  net_client.rs  overlay.rs  particles.rs  renderer.rs  scene.rs  settings.rs  sprite_atlas.rs  storage.rs  theme.rs  weather.rs
crates/breakpoint-client/src/effects/: mod.rs  particles.rs  screen_shake.rs  squash_stretch.rs
crates/breakpoint-client/src/game/: golf_input.rs  golf_plugin.rs  golf_render.rs  lasertag_input.rs  lasertag_plugin.rs  lasertag_render.rs  mod.rs  platformer_input.rs  platformer_plugin.rs  platformer_render.rs  tron_input.rs  tron_render.rs
crates/breakpoint-client/src/shaders/: glow.wgsl  glow_material.rs  gradient.wgsl  gradient_material.rs  mod.rs  ripple.wgsl  ripple_material.rs
crates/breakpoint-client/src/shaders_gl/: fog_layer.frag  glow.frag  godrays.frag  gradient.frag  health_bar.frag  magic_circle.frag  parallax.frag  postprocess.frag  postprocess.vert  ripple.frag  slash_arc.frag  sprite.frag  sprite.vert  sprite_batch.frag  sprite_batch.vert  tronwall.frag  unlit.frag  unlit.vert  water.frag  whip.frag  whip.vert
crates/breakpoint-core/: Cargo.toml
crates/breakpoint-core/src/: events.rs  game_registry.rs  game_trait.rs  lib.rs  player.rs  powerup.rs  profiling.rs  room.rs  time.rs
crates/breakpoint-core/src/net/: messages.rs  protocol.rs
crates/breakpoint-core/src/overlay/: config.rs  dashboard.rs  mod.rs  ticker.rs  toast.rs
crates/breakpoint-relay/: Cargo.toml
crates/breakpoint-relay/src/: main.rs  relay.rs
crates/breakpoint-server/: Cargo.toml
crates/breakpoint-server/src/: api.rs  auth.rs  config.rs  error.rs  event_store.rs  game_loop.rs  health.rs  lib.rs  main.rs  rate_limit.rs  room_manager.rs  sse.rs  state.rs  ws.rs
crates/breakpoint-server/src/webhooks/: github.rs
crates/breakpoint-server/tests/: api_integration.rs  game_smoke.rs  multi_client.rs  sse_integration.rs  state_divergence.rs  webhook_integration.rs  ws_integration.rs
crates/breakpoint-server/tests/common/: mod.rs
crates/games/breakpoint-golf/: Cargo.toml
crates/games/breakpoint-golf/src/: course.rs  lib.rs  physics.rs  scoring.rs
crates/games/breakpoint-lasertag/: Cargo.toml
crates/games/breakpoint-lasertag/src/: arena.rs  lib.rs  powerups.rs  projectile.rs  scoring.rs
crates/games/breakpoint-platformer/: Cargo.toml
crates/games/breakpoint-platformer/src/: combat.rs  course_gen.rs  enemies.rs  lib.rs  physics.rs  powerups.rs  rubber_band.rs  scoring.rs
crates/games/breakpoint-tron/: Cargo.toml
crates/games/breakpoint-tron/src/: arena.rs  bot.rs  collision.rs  config.rs  lib.rs  physics.rs  scoring.rs  win_zone.rs
docker/: playwright.Dockerfile  rust-ci.Dockerfile  server.Dockerfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GAME-DEVELOPMENT.md  INTEGRATION-GUIDE.md
examples/: .env.example  docker-compose.yml
examples/adapters/: notify.js  notify.py  notify.sh
examples/github-integration/.github/workflows/: breakpoint-notify.yml
patches/: winit+0.30.12.patch
scripts/: build_atlas.py
site/: docs.html  index.html  style.css
tests/browser/: click-test.spec.js  deep-render.spec.js  game-controls.spec.js  game-flow-e2e.spec.js  game-workflow.spec.js  global-setup.js  golf-aiming.spec.js  hidpi-click.spec.js  hidpi-fix-verify.spec.js  overlay-expanded.spec.js  package-lock.json  package.json  playwright.config.js  reconnect.spec.js  rendering.spec.js  startup-health.spec.js  tron.spec.js  visual-audit.spec.js  visual-debug.spec.js  wasm-loading.spec.js
tests/browser/helpers/: protocol.js  shared.js
tools/cli/agents/: stop_claude.sh
web/: debug.html  index.html  init.js  music.json  profiler.js  style.css  theme.json  ui.js
web/assets/sprites/: platformer_atlas.json
