[workspace]
resolver = "2"
members = [
    "crates/breakpoint-core",
    "crates/breakpoint-server",
    "crates/breakpoint-client",
    "crates/games/breakpoint-golf",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/AndrewAltimit/breakpoint"
authors = ["AndrewAltimit"]

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
bevy = { version = "0.18", default-features = false }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }

[patch.crates-io]
winit = { path = "vendor/winit-0.30.12" }
