[workspace]
resolver = "2"
members = [
    "crates/breakpoint-core",
    "crates/breakpoint-server",
    "crates/breakpoint-client",
    "crates/breakpoint-relay",
    "crates/games/breakpoint-golf",
    "crates/games/breakpoint-platformer",
    "crates/games/breakpoint-lasertag",
    "crates/adapters/breakpoint-github",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/AndrewAltimit/breakpoint"
homepage = "https://github.com/AndrewAltimit/breakpoint"
description = "Browser-based multiplayer gaming platform with agent monitoring overlay"
authors = ["AndrewAltimit"]

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
bevy = { version = "0.18", default-features = false }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
futures = "0.3"
proptest = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release.package.breakpoint-client]
opt-level = "z"

[patch.crates-io]
winit = { path = "vendor/winit-0.30.12" }
