[package]
name = "breakpoint-client"
description = "WASM browser client for Breakpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["golf", "platformer", "lasertag"]
golf = ["dep:breakpoint-golf"]
platformer = ["dep:breakpoint-platformer"]
lasertag = ["dep:breakpoint-lasertag"]

[dependencies]
breakpoint-core = { path = "../breakpoint-core" }
breakpoint-golf = { path = "../games/breakpoint-golf", optional = true }
breakpoint-platformer = { path = "../games/breakpoint-platformer", optional = true }
breakpoint-lasertag = { path = "../games/breakpoint-lasertag", optional = true }
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_ui",
    "bevy_text",
    "bevy_winit",
    "bevy_color",
    "default_font",
    "webgl2",
    "x11",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Location",
    "ErrorEvent",
    "CloseEvent",
    "AudioContext",
    "AudioDestinationNode",
    "GainNode",
    "OscillatorNode",
    "OscillatorType",
    "AudioParam",
    "Storage",
] }
console_error_panic_hook = "0.1"
fastrand = "2"

[lints]
workspace = true
