[package]
name = "breakpoint-core"
description = "Shared types, traits, and event schema for Breakpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
test-helpers = []
profiling = ["dep:web-sys"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
rand.workspace = true
web-sys = { version = "0.3", features = ["Performance", "Window"], optional = true }

[lints]
workspace = true
