[package]
name = "breakpoint-server"
description = "Axum host server for Breakpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
breakpoint-core = { path = "../breakpoint-core" }
axum = { version = "0.8", features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
