[package]
name = "breakpoint-github"
description = "GitHub Actions polling monitor and agent detection for Breakpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
breakpoint-core = { path = "../../breakpoint-core" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
