[package]
name = "breakpoint-golf"
description = "Mini-golf game for Breakpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
breakpoint-core = { path = "../../breakpoint-core" }
serde = { workspace = true }
rmp-serde.workspace = true

[lints]
workspace = true
