[package]
name = "breakpoint-platformer"
description = "Platform Racer game for Breakpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
breakpoint-core = { path = "../../breakpoint-core" }
serde = { workspace = true }
rmp-serde.workspace = true
rand.workspace = true

[dev-dependencies]
breakpoint-core = { path = "../../breakpoint-core", features = ["test-helpers"] }

[lints]
workspace = true
